# rtux

./: .gitignore  50-pressured-oomd.conf  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  build.rs  dev.pressured.Hud.desktop  install-extension.sh  install.sh  rtux.service  setup-hotkey.sh  setup-zram.sh  uninstall.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  bench.sh  hog.py  victim.py
gnome-extension/: extension.js  metadata.json  stylesheet.css
scripts/: check.sh  install-touch-hook.sh  install-verify-cpu.sh  install-verify-killrung.sh  install-verify-naming.sh  install-verify-spine.sh  io-delegation-spike.sh  pressure-test.sh  test-swapin.sh  verify-realign.sh  watch-faultin.sh
src/: actions.rs  cgroup.rs  classify.rs  cli.rs  events.rs  guard.rs  health.rs  ipc.rs  judgment.rs  main.rs  mitigate.rs  notify.rs  psi.rs  ranker.rs  trend.rs
