[package]
name = "pressured"
version = "0.2.0"
edition = "2021"
description = "Desktop responsiveness daemon — protects your UI under memory pressure"
license = "MIT"
repository = "https://github.com/justinstimatze/rtux"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process", "user", "fs", "socket"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# GUI HUD only — isolated behind the `hud` feature so the daemon stays GTK-free.
gtk4 = { version = "0.9", optional = true }
# libadwaita for native GNOME chrome + styling (pairs with gtk4 0.9). Needs the
# libadwaita-1-dev system lib (packaged on Ubuntu/Arch/Fedora/Nix alike).
libadwaita = { version = "0.7", optional = true, features = ["v1_5"] }

[features]
hud = ["dep:gtk4", "dep:libadwaita"]

# Daemon + ctl client (no GUI deps).
[[bin]]
name = "pressured"
path = "src/main.rs"

# Hotkey-summoned GTK4 control window (built only with --features hud).
[[bin]]
name = "pressured-hud"
path = "src/bin/pressured-hud.rs"
required-features = ["hud"]

[profile.release]
opt-level = "s"
lto = true
strip = true
